tests/tools/trip/randomTrips/validate/options.tools
-n net2.net.xml -s 42 -e 100 --validate
--error-log errorlog.txt
--verbose
