tests/tools/trip/randomTrips/errors/insertion_rate_insertion_density_conflict/options.tools
-n net.net.xml -s 42 --insertion-density 10 --insertion-rate 10
